--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header id="pageheader">
         <div class="innerheader">
             <div class="logo">
-                <a href="#" tittle="logo"><img src="assets/img/riadvi-logo.png" alt="logo"></a>
+                <a href="#" tittle="logo"><img src="img/riadvi-logo.png" alt="logo"></a>
             </div>
             <div class="mainmenu">
                 <ul>
@@ -36,22 +36,22 @@
 
             <div class="work">
                 <div class="work-item">
-                    <a><img src="assets/img/bulb.png">Business Intelligence </a>
+                    <a><img src="img/bulb.png">Business Intelligence </a>
                     <p>We build web sites that serve as the digital hub and the face of your business on the Web, so it is important that they reflect your brand well.</p>
                 </div>
 
                 <div class="work-item">
-                    <a><img src="assets/img/lock.png"> Cyber Security Testing  </a>
+                    <a><img src="img/lock.png"> Cyber Security Testing  </a>
                     <p>Cyber security testing uses multiple methodologies and tactics to measure how effective your cyber security strategy is against a potential attack. </p>
                 </div>
 
                 <div class="work-item">
-                    <a><img src="assets/img/pencil.png"> Web Development  </a>
+                    <a><img src="img/pencil.png"> Web Development  </a>
                     <p>We build web sites that serve as the digital hub and the face of your business on the Web, so it is important that they reflect your brand well. </p>
                 </div>
 
                 <div class="work-item">
-                    <a><img src="assets/img/person.png"> App Development  </a>
+                    <a><img src="img/person.png"> App Development  </a>
                     <p>It’s our goal to build apps that delight people around the world. With people increasingly relying on them, we are more focused than ever on delivering great experiences.  </p>
                 </div>
             </div>
@@ -113,7 +113,7 @@
                     </form>
                 </div>   
                 <div class="sparrow">   
-                    <h4><img src="assets/img/riadvi-logo.png"> Best Software Services</h4> 
+                    <h4><img src="img/riadvi-logo.png"> Best Software Services</h4> 
                     <p>@riyadvisoftwaretechnologies</p> 
                 </div>
             </div>
@@ -136,10 +136,10 @@
                         <h3>Social Networks</h3>
                         <p>Find Us on The Social Network Sites</p>
                         <div class="social-media-icons">
-                            <li><a href="#" title="Twitter"><img src="assets/img/twitter.png"></i></a></li>
-                            <li><a href="#" title="Facebook"><img src="assets/img/fb logo.png"></i></a></li>
-                            <li> <a href="#" title="LinkedIn"><img src="assets/img/linkedin logo.png"></i></a></li>
-                            <li><a href="#" title="Youtube"><img src="assets/img/youtubelogo.png"></i></a></li>
+                            <li><a href="#" title="Twitter"><img src="img/twitter.png"></i></a></li>
+                            <li><a href="#" title="Facebook"><img src="img/fb logo.png"></i></a></li>
+                            <li> <a href="#" title="LinkedIn"><img src="img/linkedin logo.png"></i></a></li>
+                            <li><a href="#" title="Youtube"><img src="img/youtubelogo.png"></i></a></li>
                         </div>
                     </ul>
                 </li>
